# SET

./: .agentsgen.json  AGENTS.md  CONTRIBUTING.md  README.md  RUNBOOK.md  action.yml  agents.knowledge.json  pyproject.toml
.github/workflows/: agentsgen-pr-guard.yml  ci.yml  release.yml  set.yml
docs/: agent-governance-capability-contract.md  agent-operations-contract.md  bounded-orchestration-contract.md  bug-evidence-contract.md  capability-profiles.md  config-apply-planning.md  context-budget-hint.md  design-taste-review-contract.md  external-ai-engineering-references.md  git-native-context-contract.md  id-bootstrap.md  llmo-capability-map.md  loop-hardening-contract.md  loop-readiness-contract.md  loop-readiness-hint.md  memory-capability-contract.md  orchestrator-compatibility.md  repo-config.md  research-diversity-hint.md  skill-quality-pipeline-contract.md  task-closeout-audit-contract.md  terminal-agent-multiplexer-reference.md  v0.1-scope.md
docs/ai/: graph.mmd  repomap.compact.md  repomap.md  task-contract.json
docs/references/: agent-orchestrators.md  open-notebook.md
examples/: repo-config.example.json
presets/: minimal.env  repo-docs.env  site-ai.env
registry/repos/: markoblogo_AGENTS.md_generator.json  markoblogo_ID.json  markoblogo_SET.json  (+2 more)
schema/: repo-config.v1.json
scripts/: __init__.py  export_id_bootstrap.py  plan_config_apply.py  resolve_inputs.py  validate_registry.py  write_summary.py
tests/: test_contract_snapshots.py  test_export_id_bootstrap.py  test_plan_config_apply.py  test_validate_registry.py  test_write_summary.py
(+7 files in other folders)
